--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h4 class="center info"> Tries Left: <span id="tries_left"> </span> </h4>
         <h4 id="game-over" class="hidden info">Game Over! Would you like to play again? </h4>
         <h4 id="winner" class="hidden info">You Win! Would you like to play again? </h4>
-        <button type="button" id="play_again" class="btn-info hidden">Play Again</button>
+        <button type="button" id="play_again" class="main-menu-btn hidden">Play Again</button> <br />
+        <a style="text-decoration: none;" href="home.html"><button class="main-menu-btn">Home</button></a> <br />
         <div class="container">
             <div id="cards_cont">
                 <!-- All the photos will be held here
